Fixed mobile view intro alignment

--- a/styling.css
+++ b/styling.css
@@ -102,6 +102,16 @@ ul {
     font-family: 'Nova Mono', monospace;
 }
 
+.button-email {
+    padding: .5rem;
+    border-radius: 50px;
+    border: 1px solid white;
+    background-color: transparent;
+    font-size: 14pt;
+    color: white;
+    font-family: 'Nova Mono', monospace;
+}
+
 .button:hover {
     transform: scale(1.1);
     box-shadow: 0 0 4px 4px rgba(0, 0, 0, .25);
@@ -143,7 +153,7 @@ ul {
         flex-direction: column;
         align-items: center;
         text-align: center;
-        margin: 1rem;
+        margin: 7rem 1rem 6rem 1rem;
     }
 
     .info-tab {
